fix button to align left on medium breakpoint

--- a/src/components/Player/Header/PlayerHeader.css
+++ b/src/components/Player/Header/PlayerHeader.css
@@ -85,6 +85,11 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+}
+
+.playerButtonsContainerSmall {
+  composes: playerButtonsContainer;
   justify-content: center;
 }
 
